<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gpa_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        android:text="@string/gpa_calculator"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/grade1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="48dp"
        android:text="@string/grade_1"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpa_calc" />

    <TextView
        android:id="@+id/grade2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="41dp"
        android:text="@string/grade_2"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade1" />

    <TextView
        android:id="@+id/grade3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="41dp"
        android:text="@string/grade_3"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade2" />

    <TextView
        android:id="@+id/grade4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="41dp"
        android:text="@string/grade_4"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade3" />

    <TextView
        android:id="@+id/grade5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="41dp"
        android:text="@string/grade_5"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade4" />

    <TextView
        android:id="@+id/gpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="41dp"
        android:text="@string/final_gpa"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade5" />

    <EditText
        android:id="@+id/enter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_grade_1"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/grade1"
        app:layout_constraintTop_toBottomOf="@+id/gpa_calc" />

    <EditText
        android:id="@+id/enter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enter_grade_2"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/grade2"
        app:layout_constraintTop_toBottomOf="@+id/enter1" />

    <EditText
        android:id="@+id/enter3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enter_grade_3"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/grade3"
        app:layout_constraintTop_toBottomOf="@+id/enter2" />

    <EditText
        android:id="@+id/enter4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enter_grade_4"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/grade4"
        app:layout_constraintTop_toBottomOf="@+id/enter3" />

    <EditText
        android:id="@+id/enter5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enter_grade_5"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/grade5"
        app:layout_constraintTop_toBottomOf="@+id/enter4" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="418dp"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/gpa"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:onClick="computeGPA"
        android:text="@string/compute_gpa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>